# AVR_FF

./: .gitignore  AVR_forth.stc  CLAUDE.md  FF5_0.CoolTermSettings  README.md  forth.stc  fu.py  pyproject.toml  up.py  up_ct.py  words.txt  wordsAll.txt
avr_ff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: blink.fs  board_speed.fs  button_struct.fs  buttons.fs  buttonsv2.fs  digitalread.fs  exec_speed.fs  flashforth_speed.fs.md  forth_ascii.fs  fsm.fs  speed-test.fs  tasks.fs  test.fs  timing.fs
forth/: asm.fs  bit.fs  task-test-uno.fs  task.fs  us.fs
tutorials/: build_pdf.sh  flashforth5_quick_ref_AVR.html  flashforth5_quick_ref_AVR.md  flashforth5_quick_ref_all.md  header.tex
utilities/: up.py  upff.py  upload_FF.py
